@@ -1,3 +1,15 @@
+2009-12-04  Peter Kasting  <pkasting@google.com>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] Simplify zoom-related APIs and add a zoom level getter,
+        part two: Remove deprecated APIs.
+        https://bugs.webkit.org/show_bug.cgi?id=31893
+
+        * public/WebView.h:
+        * src/WebViewImpl.cpp:
+        * src/WebViewImpl.h:
+
 2009-12-03  Jonathan Dixon  <joth@chromium.org>
 
         Reviewed by Dimitri Glazkov.
